added formuladb icons to the editor

--- a/apps/formuladb-internal/formuladb.io/index.html
+++ b/apps/formuladb-internal/formuladb.io/index.html
@@ -50,6 +50,9 @@
     <style type="text/css">
         iframe#_hjRemoteVarsFrame {display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;}
     </style>
+    <style type="text/css">
+        iframe#_hjRemoteVarsFrame {display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;}
+    </style>
 
 </head>
 
@@ -150,16 +153,20 @@
                         <h1 class="display-3 text-white">Build Your Own
 
 
+
                             <br> Web Applications
+
 
 
                             <br> Without Coding
 
 
 
+
                         </h1>
                         <p class="lead  text-white">
                             <strong>50+</strong> samples, easy to customize and combine, start in minutes.
+
 
 
 
@@ -266,43 +273,54 @@
                         <a class="dropdown-item" href="#" data-filter=".photography">Photography</a>
                         <a href="#" class="dropdown-item" data-filter=".coming">Coming Soon</a>
                         <a class="dropdown-item" href="#" data-filter=".other">Other</a>
+                        <a href="#" class="dropdown-item" data-filter=".ecommerce">E-commerce</a>
+                        <a href="#" class="dropdown-item" data-filter=".food">Food &amp; Restaurant</a>
+                        <a class="dropdown-item" href="#" data-filter=".medical">Medical &amp; Health Care</a>
+                        <a class="dropdown-item" href="#" data-filter=".travel">Travel &amp; Booking</a>
+                        <a class="dropdown-item" href="#" data-filter=".multipurpose">Multipurpose</a>
+                        <a class="dropdown-item" href="#" data-filter=".personal">Personal</a>
+                        <a class="dropdown-item" href="#" data-filter=".portfolio">Portfolio</a>
+                        <a href="#" class="dropdown-item" data-filter=".event">Events &amp; Wedding</a>
+                        <a class="dropdown-item" href="#" data-filter=".photography">Photography</a>
+                        <a href="#" class="dropdown-item" data-filter=".coming">Coming Soon</a>
+                        <a class="dropdown-item" href="#" data-filter=".other">Other</a>
                     </div>
                 </li>
             </ul>
         </nav>
         <div class="grid frmdb-isotope-grid" style="">
-            <a id="Inventory" href="/formuladb-editor/editor.html#/formuladb-examples/inventory/index.html" class="admin item" data-category="Admin &amp; Dashboard" style="" data-frmdb-table="$FRMDB.SampleApp[]" data-frmdb-record="SampleApp~~01">
+            <a id="Inventory" href="/formuladb-editor/editor.html#/formuladb-examples/inventory/index.html" class="admin item" data-category="Admin &amp; Dashboard" style="" data-frmdb-table="$FRMDB.SampleApp[]" data-frmdb-record="SampleApp~~01" data-frmdb-table-limit="3">
                 <div class="card">
                     <div class="card-header text-center">
                         <div class="ribbon ribbon-top-left">
                             <span>Wish List</span>
                         </div>
-                        <div class="item-name">Inventory</div>
-                        <div class="item-category">Admin &amp; Dashboard</div>
+                        <div class="item-name" data-frmdb-value="$FRMDB.SampleApp[].name">Inventory</div>
+                        <div class="item-category" data-frmdb-value="$FRMDB.SampleApp[].category">Business Planning</div>
                     </div>
                     <img class="card-img-bottom" src="assets/images/sb-admin-2.png" alt="Card image cap">
                 </div>
             </a>
-            <a id="aGMS9ein7T8K3KNawbpziP" href="/formuladb-editor/editor.html#/formuladb-examples/inventory/index.html" class="admin item" data-category="Admin &amp; Dashboard" style="" data-frmdb-table="$FRMDB.SampleApp[]" data-frmdb-record="SampleApp~~02">
+            <a id="tg36LYXmwQEG5dvvX9TjUP" href="/formuladb-editor/editor.html#/formuladb-examples/inventory/index.html" class="admin item" data-category="Admin &amp; Dashboard" style="" data-frmdb-table="$FRMDB.SampleApp[]" data-frmdb-record="SampleApp~~02" data-frmdb-table-limit="3">
                 <div class="card">
                     <div class="card-header text-center">
                         <div class="ribbon ribbon-top-left">
                             <span>Wish List</span>
                         </div>
-                        <div class="item-name">Inventory</div>
-                        <div class="item-category">Admin &amp; Dashboard</div>
+                        <div class="item-name" data-frmdb-value="$FRMDB.SampleApp[].name">Hotel Booking</div>
+                        <div class="item-category" data-frmdb-value="$FRMDB.SampleApp[].category">Booking &amp; Appointments</div>
                     </div>
                     <img class="card-img-bottom" src="assets/images/sb-admin-2.png" alt="Card image cap">
                 </div>
             </a>
-            <a id="xpHUs24bwWaxR1J5jm7xLY" href="/formuladb-editor/editor.html#/formuladb-examples/inventory/index.html" class="admin item" data-category="Admin &amp; Dashboard" style="" data-frmdb-table="$FRMDB.SampleApp[]" data-frmdb-record="SampleApp~~03">
+            <a id="ejYqBqggoP6KNvHmq2AckW" href="/formuladb-editor/editor.html#/formuladb-examples/inventory/index.html" class="admin item" data-category="Admin &amp; Dashboard" style="" data-frmdb-table="$FRMDB.SampleApp[]" data-frmdb-record="SampleApp~~03" data-frmdb-table-limit="3">
                 <div class="card">
                     <div class="card-header text-center">
                         <div class="ribbon ribbon-top-left">
                             <span>Wish List</span>
                         </div>
-                        <div class="item-name">Inventory</div>
-                        <div class="item-category">Admin &amp; Dashboard</div>
+                        <div class="item-name" data-frmdb-value="$FRMDB.SampleApp[].name">Service Management</div>
+                        <div class="item-category" data-frmdb-value="$FRMDB.SampleApp[].category">Maintenance Services</div>
                     </div>
                     <img class="card-img-bottom" src="assets/images/sb-admin-2.png" alt="Card image cap">
                 </div>
@@ -1008,9 +1026,12 @@
                         webdesign
 
 
+
                         <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>,
 
+
                         <a href="https://themewagon.com">ThemeWagon</a>.
+
 
 
                     </div>
@@ -1034,6 +1055,7 @@
         })
     </script>
     <script src="/formuladb/frmdb-fe.js"></script>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
     <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
 </body>
 
