--- a/fe/icons/icons.html
+++ b/fe/icons/icons.html
@@ -63,7 +63,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-cards-row"></i>
+                <i class=" frmdb-i-cards-row"></i>
             </span>
             <br>
             <span class='label'>cards-row</span>
@@ -72,7 +72,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-cards"></i>
+                <i class=" frmdb-i-cards"></i>
             </span>
             <br>
             <span class='label'>cards</span>
@@ -81,7 +81,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-carousel"></i>
+                <i class=" frmdb-i-carousel"></i>
             </span>
             <br>
             <span class='label'>carousel</span>
@@ -90,7 +90,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-dashboard"></i>
+                <i class=" frmdb-i-dashboard"></i>
             </span>
             <br>
             <span class='label'>dashboard</span>
@@ -99,7 +99,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-f-pattern-solid"></i>
+                <i class=" frmdb-i-f-pattern-solid"></i>
             </span>
             <br>
             <span class='label'>f-pattern-solid</span>
@@ -108,7 +108,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-f-pattern"></i>
+                <i class=" frmdb-i-f-pattern"></i>
             </span>
             <br>
             <span class='label'>f-pattern</span>
@@ -117,7 +117,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-frmdb"></i>
+                <i class=" frmdb-i-frmdb"></i>
             </span>
             <br>
             <span class='label'>frmdb</span>
@@ -126,7 +126,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-grid-large"></i>
+                <i class=" frmdb-i-grid-large"></i>
             </span>
             <br>
             <span class='label'>grid-large</span>
@@ -135,7 +135,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-grid1"></i>
+                <i class=" frmdb-i-grid1"></i>
             </span>
             <br>
             <span class='label'>grid1</span>
@@ -144,7 +144,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-grid2"></i>
+                <i class=" frmdb-i-grid2"></i>
             </span>
             <br>
             <span class='label'>grid2</span>
@@ -153,7 +153,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-grid4"></i>
+                <i class=" frmdb-i-grid4"></i>
             </span>
             <br>
             <span class='label'>grid4</span>
@@ -162,7 +162,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-grid5"></i>
+                <i class=" frmdb-i-grid5"></i>
             </span>
             <br>
             <span class='label'>grid5</span>
@@ -171,7 +171,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-list-solid"></i>
+                <i class=" frmdb-i-list-solid"></i>
             </span>
             <br>
             <span class='label'>list-solid</span>
@@ -180,7 +180,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-list"></i>
+                <i class=" frmdb-i-list"></i>
             </span>
             <br>
             <span class='label'>list</span>
@@ -189,7 +189,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-replace"></i>
+                <i class=" frmdb-i-replace"></i>
             </span>
             <br>
             <span class='label'>replace</span>
@@ -198,7 +198,7 @@
 
         <div class="preview">
             <span class="inner">
-                <i class=" icon-split-screen"></i>
+                <i class=" frmdb-i-split-screen"></i>
             </span>
             <br>
             <span class='label'>split-screen</span>
