--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -22,6 +22,7 @@
 
 	<link href="css/editor.css" rel="stylesheet">
 	<link href="css/line-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/formuladb/icons/icons.css" />
 
 	<style>
 		#vvveb-code-editor .CodeMirror {
