--- a/apps/formuladb-examples/hotel-booking/index.html
+++ b/apps/formuladb-examples/hotel-booking/index.html
@@ -1,36 +1,30 @@
 <!DOCTYPE html>
-<html>
+
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="image/favicon.png" type="image/png">
     <title>Royal Hotel</title>
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="vendors/linericon/style.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
-    <!-- main css -->
     <link rel="stylesheet" id="frmdb-theme-css" href="css/royal-master-1.css">
 </head>
-    
+
 <body>
-
     <header class="header_area">
-        <frmdb-fragment name="nav-F.html">
-            <div class="color-primary">BLABLA</div>
-        </frmdb-fragment>
+        <frmdb-fragment name="nav-F.html"></frmdb-fragment>
     </header>
-
-    <!--================Banner Area =================-->
     <section class="banner_area">
         <div class="booking_table d_flex align-items-center">
-            <div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background="" style="transform: translateY(0px);"></div>
+            <div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background="" style=""></div>
             <div class="container">
                 <div class="banner_content text-center">
                     <h6>Away from monotonous life</h6>
                     <h2>Relax Your Mind</h2>
-                    <p>If you are looking at blank cassettes on the web, you may be very confused at the<br> difference in price. You may see some for as low as $.17 each.</p>
+                    <p>If you are looking at blank cassettes on the web, you may be very confused at the
+                        <br> difference in price. You may see some for as low as $.17 each.
+                    </p>
                     <a href="#" class="btn theme_btn button_hover">Get Started</a>
                 </div>
             </div>
@@ -43,9 +37,6 @@
             </div>
         </div>
     </section>
-    <!--================Banner Area =================-->
-
-    <!--================ Accomodation Area  =================-->
     <section class="accomodation_area section_gap">
         <div class="container">
             <div class="section_title text-center">
@@ -62,7 +53,9 @@
                         <a href="#">
                             <h4 class="sec_h4">Double Deluxe Room</h4>
                         </a>
-                        <h5>$250<small>/night</small></h5>
+                        <h5>$250
+                            <small>/night</small>
+                        </h5>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
@@ -74,7 +67,9 @@
                         <a href="#">
                             <h4 class="sec_h4">Single Deluxe Room</h4>
                         </a>
-                        <h5>$200<small>/night</small></h5>
+                        <h5>$200
+                            <small>/night</small>
+                        </h5>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
@@ -86,7 +81,9 @@
                         <a href="#">
                             <h4 class="sec_h4">Honeymoon Suit</h4>
                         </a>
-                        <h5>$750<small>/night</small></h5>
+                        <h5>$750
+                            <small>/night</small>
+                        </h5>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
@@ -98,18 +95,16 @@
                         <a href="#">
                             <h4 class="sec_h4">Economy Double</h4>
                         </a>
-                        <h5>$200<small>/night</small></h5>
+                        <h5>$200
+                            <small>/night</small>
+                        </h5>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!--================ Accomodation Area  =================-->
-
-    <!--================ Facilities Area  =================-->
     <section class="facilities_area section_gap">
-        <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background="">
-        </div>
+        <div class="overlay bg-parallax" data-stellar-ratio="0.8" data-stellar-vertical-offset="0" data-background="" style=""></div>
         <div class="container">
             <div class="section_title text-center">
                 <h2 class="title_w">Royal Facilities</h2>
@@ -118,52 +113,64 @@
             <div class="row mb_30">
                 <div class="col-lg-4 col-md-6">
                     <div class="facilities_item">
-                        <h4 class="sec_h4"><i class="lnr lnr-dinner"></i>Restaurant</h4>
+                        <h4 class="sec_h4">
+                            <i class="lnr lnr-dinner"></i>Restaurant
+                        </h4>
                         <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="facilities_item">
-                        <h4 class="sec_h4"><i class="lnr lnr-bicycle"></i>Sports CLub</h4>
+                        <h4 class="sec_h4">
+                            <i class="lnr lnr-bicycle"></i>Sports CLub
+                        </h4>
                         <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="facilities_item">
-                        <h4 class="sec_h4"><i class="lnr lnr-shirt"></i>Swimming Pool</h4>
+                        <h4 class="sec_h4">
+                            <i class="lnr lnr-shirt"></i>Swimming Pool
+                        </h4>
                         <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="facilities_item">
-                        <h4 class="sec_h4"><i class="lnr lnr-car"></i>Rent a Car</h4>
+                        <h4 class="sec_h4">
+                            <i class="lnr lnr-car"></i>Rent a Car
+                        </h4>
                         <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="facilities_item">
-                        <h4 class="sec_h4"><i class="lnr lnr-construction"></i>Gymnesium</h4>
+                        <h4 class="sec_h4">
+                            <i class="lnr lnr-construction"></i>Gymnesium
+                        </h4>
                         <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="facilities_item">
-                        <h4 class="sec_h4"><i class="lnr lnr-coffee-cup"></i>Bar</h4>
+                        <h4 class="sec_h4">
+                            <i class="lnr lnr-coffee-cup"></i>Bar
+                        </h4>
                         <p>Usage of the Internet is becoming more common due to rapid advancement of technology and power.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!--================ Facilities Area  =================-->
-
-    <!--================ About History Area  =================-->
     <section class="about_history_area section_gap">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 d_flex align-items-center">
                     <div class="about_content ">
-                        <h2 class="title title_color">About Us <br>Our History<br>Mission &amp; Vision</h2>
+                        <h2 class="title title_color">About Us
+                            <br>Our History
+                            <br>Mission &amp; Vision
+                        </h2>
                         <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
                         <a href="#" class="button_hover theme_btn_two">Request Custom Price</a>
                     </div>
@@ -174,10 +181,7 @@
             </div>
         </div>
     </section>
-    <!--================ About History Area  =================-->
-
     <frmdb-fragment name="footer-F.html" data-vvveb-disabled=""></frmdb-fragment>
-
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -189,7 +193,7 @@
     <script src="js/stellar.js"></script>
     <script src="vendors/lightbox/simpleLightbox.min.js"></script>
     <script src="js/custom.js"></script>
-    
-    <script src="/formuladb/frmdb-fe.js"></script>    
+    <script src="/formuladb/frmdb-fe.js"></script>
 </body>
+
 </html>
