added login and register pages for formuladb.io; disabled isotop filters when frmdb-editor-on

--- a/apps/formuladb-internal/formuladb.io/add__WishListRequest.html
+++ b/apps/formuladb-internal/formuladb.io/add__WishListRequest.html
@@ -16,7 +16,7 @@
                             <div class="input-group-prepend">
                                 <div class="input-group-text">App</div>
                             </div>
-                            <select disabled class="form-control" id="details" rows="3" data-frmdb-value data-frmdb-target-field="app">
+                            <select readonly class="form-control" id="details" rows="3" data-frmdb-value data-frmdb-target-field="app">
                                 <option selected data-frmdb-attr="value::$INITDATA$._id" data-frmdb-value="::$INITDATA$._id_"></option>
                             </select>
                         </div>
